<resources>
    <string name="app_name">Reservations</string>
    <string name="add_reservation_label">Add Reservation</string>
    <string name="no_admin_mail_toast">You have to enter admin email in the preferences!</string>


    <string name="phone_number">Phone Number</string>
    <string name="number_of_guests">Number of Guests</string>
    <string name="name">Name</string>
    <string name="e_mail">Email</string>
    <string name="add_reservation_action">Add reservation</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">PickTime</string>
    <string name="blank_fields">Please fill all fields!</string>
    <string name="guest_name_label">Name: %1$s</string>
    <string name="number_of_guests_label">Number of Guests: %d</string>

    <string name="preferences_label">Preferences</string>
    <string name="email_pref_key">email_pref_key</string>
    <string name="email_pref_title">Email of administrator</string>
    <string name="email_hint">john.doe@provider.com</string>

    <string name="email_subject">Reservation Notification</string>
    <string name="email_body">\t\t\t Hello Mr\\Mrs, \n\n
        \t Please check below the reservation details: \n
        \t Guest Name: %1$s \n
        \t Number of Guests: %2$s \n
        \t Phone Number: %3$s \n
        \t Customer email: %4$s \n
        \t Date of the reservation: %5$s \n\n

        Thank you for choosing our service!
    </string>
    <string name="no_mails_toast">There are no email clients installed.</string>
    <string name="email_chooser_titles">Send mail...</string>
    <string name="settings_label">Settings</string>
</resources>
